--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -72,6 +72,7 @@
   
     /** NAVBAR **/
     --nav-item-font-family: var(--font-family-headings);
+    --nav-item-font-weight: var(--font-weight-bold);
   
   /* Form group
       ============================= */
